--- a/account/templates/home.html
+++ b/account/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'profile_base.html' %}
  
 {% block content %}
+<meta name="google-site-verification" content="AR3ijhUUG0JFolLRh2GqR_P2oHmWQPU_mEQoWoRbSNA" />
     <!-- Home Section Start -->
     <div class="signup-section ptb-60" >
         <div class="container">
