--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -58,6 +58,7 @@
 }
 
     </style>
+    <meta name="google-site-verification" content="AR3ijhUUG0JFolLRh2GqR_P2oHmWQPU_mEQoWoRbSNA" />
     {% if user.is_superuser or user.groups.exists %}    
         <div class="navbar-area sublinks">
             <div class="container">
