--- a/dl/templates/manuscripts_in_process.html
+++ b/dl/templates/manuscripts_in_process.html
@@ -152,7 +152,7 @@
         <button type="submit" class="btn btn-filter">Filter</button>
     </form>
 
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Title</th>
