--- a/static_templates/templates/editorial_board_members_ijam.html
+++ b/static_templates/templates/editorial_board_members_ijam.html
@@ -218,7 +218,7 @@
                             <div class="editor-card-board">                             
                                         <div class="editor-info">
                                             <h4>
-                                                Prof. N. Rudraiah
+                                                Prof. X. XXXX
                                             </h4>
                                             <!-- <b>Professor</b> -->
                                             <ul>    
@@ -236,7 +236,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Prof. Rosihan M. Ali
+                                        Prof. XXXX X.
                                     </h4>
                                     <!-- <b>Professor</b> -->
                                     <ul>    
@@ -253,7 +253,7 @@
                             <div class="editor-card-board">   
                                 <div class="editor-info">
                                     <h4>
-                                        Prof. M. Sambandham
+                                        Prof. X. XXXX
                                     </h4>
                                     <!-- <b>Professor</b> -->
                                     <ul>    
@@ -270,7 +270,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Prof. V. Murali
+                                        Prof. X. XXXX
                                     </h4>
                                     <!-- <b>Associate Professor</b> -->
                                     <ul>    
@@ -289,7 +289,7 @@
                             <div class="editor-card-board">                             
                                         <div class="editor-info">
                                             <h4>
-                                                Prof. T. Thrivikraman
+                                                Prof. X. XXXX
                                             </h4>
                                             <ul>    
                                                 <li>
@@ -306,7 +306,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Prof. D. Sivaraj
+                                        Prof. X. XXXX
                                     </h4>
                                     <!-- <b>Professor</b> -->
                                     <ul>    
@@ -323,7 +323,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Prof. A. Anguraj
+                                        Prof. X. XXXX
                                     </h4>
                                     <!-- <b>Dean & Professor</b> -->
                                     <ul>    
@@ -340,7 +340,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Prof. Dr. A.Nagoorgani
+                                        Prof. Dr. X.XXXX
                                     </h4>
                                     <!-- <b>Professor and Chairman</b> -->
                                     <ul>    
@@ -364,7 +364,7 @@
                         <div class="editor-card-board">                               
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. K. Kalidass
+                                            Dr. X. XXXX
                                         </h4>
                                         <b>Assistant Professor</b>
                                         <ul>    
