--- a/static_templates/templates/editorial_board_members_jcm.html
+++ b/static_templates/templates/editorial_board_members_jcm.html
@@ -239,7 +239,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Dr. K.S. Chandrasekar, MBA., Ph.D.,
+                                        Dr. X.X. XXXX, MBA., Ph.D.,
                                     </h4>
                                     <b>Director</b>
                                     <ul>    
@@ -247,7 +247,7 @@
                                             Institute of Management Studies,
                                             <br>University of Kerala, <br>Thiruvananthapuram.   
                                             <br>Email: <a
-                                                href="mailto:kscnair@keralauniversity.ac.in">kscnair@keralauniversity.ac.in</a>
+                                                href="mailto:XXXXX@university.ac.in">XXXX@university.ac.in</a>
                                         </li>        
                                     </ul>
                                 </div>
@@ -257,7 +257,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Dr. V. Balachandran, M.Com., M.Phil., Ph.D.
+                                        Dr. X. XXXX, M.Com., M.Phil., Ph.D.
                                     </h4>
                                     <b>Professor</b>
                                     <ul>    
@@ -267,7 +267,7 @@
                                             <br>Central University of Kerala, Kerala.
                                             
                                             <br>Email: <a
-                                                href="mailto:drvbchand@cukerala.ac.in">drvbchand@cukerala.ac.in</a>
+                                                href="mailto:XXXXX@kerala.ac.in">XXXXX@kerala.ac.in</a>
                                         </li>        
                                     </ul>
                                 </div>
@@ -279,7 +279,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Dr. Malabika Deo, M.Com., M.Phil., Ph.D.
+                                        Dr. XXXX , M.Com., M.Phil., Ph.D.
                                     </h4>
                                     <b>Professor</b>
                                     <ul>    
@@ -288,7 +288,7 @@
                                             <br>Pondicherry University,
                                             <br>Pondicherry.
                                             <br>Email: <a
-                                                href="mailto:malabika.com@pondiuni.edu.in">malabika.com@pondiuni.edu.in</a>
+                                                href="mailto:XXXXXX@pondiuni.edu.in">XXXXXX@pondiuni.edu.in</a>
                                         </li>        
                                     </ul>
                                 </div>
@@ -298,7 +298,7 @@
                             <div class="editor-card-board">                             
                                 <div class="editor-info">
                                     <h4>
-                                        Dr. T. Siddaih, M.Com., Ph.D.
+                                        Dr. X. XXXX, M.Com., Ph.D.
                                     </h4>
                                     <b>Senior Professor</b>
                                     <ul>    
@@ -307,7 +307,7 @@
                                             <br>Chikkahagade Cross, Chandapura – Anekal Road,
                                             <br>University Campus, Anekal, Karnataka – 562 106.
                                             <br>Email: <a
-                                                href="mailto:siddaiah.t@alliance.edu.in">siddaiah.t@alliance.edu.in</a>
+                                                href="mailto:XXXXXX@alliance.edu.in">siddaiah.t@alliance.edu.in</a>
                                         </li>        
                                     </ul>
                                 </div>
@@ -319,7 +319,7 @@
                             <div class="editor-card-board">   
                                 <div class="editor-info">
                                     <h4>
-                                        Dr. M. Sumathy
+                                        Dr. X. XXXX
                                     </h4>
                                     <b>Professor & Head</b>
                                     <ul>    
@@ -328,7 +328,7 @@
                                             <br>Bharathiar University,
                                             <br>Coimbatore – 641 046.
                                             <br>Email: <a
-                                                href="mailto:sumathy@buc.edu.in">sumathy@buc.edu.in</a>
+                                                href="mailto:XXXX@buc.edu.in">XXXX@buc.edu.in</a>
                                         </li>    
                                     </ul>
                                 </div>
