--- a/static_templates/templates/main_base.html
+++ b/static_templates/templates/main_base.html
@@ -567,7 +567,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
     {% endblock %}
- 
+ <meta name="google-site-verification" content="AR3ijhUUG0JFolLRh2GqR_P2oHmWQPU_mEQoWoRbSNA" />
 
        <!-- Footer Section Start -->
        <footer class="footer-area pt-70 pb-50">
