--- a/static_templates/templates/review_board_ijam.html
+++ b/static_templates/templates/review_board_ijam.html
@@ -181,7 +181,7 @@
                                 <div class="editor-card-board">                             
                                             <div class="editor-info">
                                                 <h4>
-                                                    Dr. Sherif I. Ammar
+                                                    Dr. XXX
                                                 </h4>
                                                 <ul>    
                                                     <li>
@@ -190,7 +190,7 @@
                                                         <br>Menofia University, Shebin El_Kom,
                                                         Menofia, Zip code (32511),
                                                         <br>Egypt.
-                                                        <br>Email: <a href="mailto:sherifamar2000@yahoo.com">sherifamar2000@yahoo.com</a>
+                                                        <br>Email: <a href="mailto:XXXX@yahoo.com">XXXX@yahoo.com</a>
                                                     </li>        
                                                 </ul>
                                             </div>
@@ -200,7 +200,7 @@
                                 <div class="editor-card-board">                             
                                             <div class="editor-info">
                                                 <h4>
-                                                    Dr. A. Muthusamy
+                                                    Dr. XXX
                                                 </h4>
                                                 <ul>    
                                                     <li>
@@ -209,7 +209,7 @@
                                                         <br>Periyar University,
                                                         <br>Salem - 636 011.
                                                         <br>Mobile No: 9842035190
-                                                        <br>Email: <a href="mailto:ambdu@yahoo.com">ambdu@yahoo.com</a>               
+                                                        <br>Email: <a href="XXXX@yahoo.com">XXXX@yahoo.com</a>               
                                                     </li>        
                                                 </ul>
                                             </div>
@@ -221,7 +221,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. M. Lellis Divagar
+                                            Dr. XXXX
                                         </h4>
 
                                         <ul>    
@@ -231,7 +231,7 @@
                                                 <br>Madurai Kamaraj University,
                                                 <br>Madurai-625021.
                                                 <br>Mobile No: 9443805959
-                                                <br>Email: <a href="mailto:thivagar.maths@mkuniversity.org">thivagar.maths@mkuniversity.org</a>  
+                                                <br>Email: <a href="mailto:XXXX@mkuniversity.org">XXXX@mkuniversity.org</a>  
                                             </li>        
                                         </ul>
                                     </div>
@@ -241,7 +241,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. R. Uthayakumar
+                                            Dr. XXXX
                                         </h4>
 
                                         <ul>    
@@ -251,7 +251,7 @@
                                                 <br>Gandhigram Rural Institute,
                                                 <br>Gandhigram, Dindigul.
                                                 <br>Mobile No: 8903403855
-                                                <br>Email: <a href="mailto:uthayagri@gmail.com">uthayagri@gmail.com</a>  
+                                                <br>Email: <a href="mailto:XXXX@gmail.com">XXXX@gmail.com</a>  
                                             </li>        
                                         </ul>
                                     </div>
@@ -263,7 +263,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. K. Sivagamasundari
+                                            Dr. XXXX
                                         </h4>
                                         <ul>    
                                             <li>
@@ -272,7 +272,7 @@
                                                 <br>Avinasilingam Institute for Home Science and Higher Education, 
                                                 <br>Coimbatore-43.
                                                 <br>Mobile No: 9894307340
-                                                <br>Email: <a href="mailto:sivanath2011@gmail.com">sivanath2011@gmail.com</a>  
+                                                <br>Email: <a href="mailto:XXXX@gmail.com">XXXX@gmail.com</a>  
                                             </li>            
                                         </ul>
                                     </div>
@@ -282,7 +282,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. K. Somasundaram
+                                            Dr. XXXX
                                         </h4>
                                         
                                         <ul>    
@@ -293,7 +293,7 @@
                                                 <br>Ettimadai,
                                                 <br> Coimbatore.
                                                 <br>Mobile No: 9443657545
-                                                <br>Email: <a href="mailto:s_sundaram@cb.amrits.edu">s_sundaram@cb.amrits.edu</a> 
+                                                <br>Email: <a href="mailto:XXXX@cb.amrits.edu">XXXX@cb.amrits.edu</a> 
                                             </li>        
                                         </ul>
                                     </div>
@@ -305,7 +305,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. S. Anbazhagan
+                                            Dr. XXXX
                                         </h4>
                                 
                                     <ul>    
@@ -315,7 +315,7 @@
                                             <br>Alagappa University,
                                             <br>Karaikudi-630003.
                                             <br>Mobile No: 9790292525
-                                            <br>Email: <a href="mailto:anbazhagan_n@yahoo.co.in">anbazhagan_n@yahoo.co.in</a>  
+                                            <br>Email: <a href="mailto:XXXX@yahoo.co.in">XXXX@yahoo.co.in</a>  
                                         </li>           
                                     </ul>
                                 </div>
@@ -325,7 +325,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. K. Bhuvaneswari
+                                            Dr. XXXX
                                         </h4>
                                 
                                     <ul>    
@@ -335,7 +335,7 @@
                                             <br>Mother Teresa Women’s University,
                                             <br>Kodaikanal – 624 101.
                                             <br>Mobile No: 9489954277
-                                            <br>Email: <a href="mailto:drkbmaths@gmail.com">drkbmaths@gmail.com</a>  
+                                            <br>Email: <a href="mailto:XXX@gmail.com">XXX@gmail.com</a>  
                                         </li>       
                                     </ul>
                                 </div>
@@ -347,7 +347,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Arokiarani
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
@@ -357,7 +357,7 @@
                                                 <br>Nirmala College for Womem(Autonomous),
                                                 Coimbatore-12.
                                                 <br>Mobile No: 9952336480
-                                                <br>Email: <a href="mailto:stell11960@yahoo.co.in">stell11960@yahoo.co.in</a>  
+                                                <br>Email: <a href="mailto:XXX@yahoo.co.in">XXX@yahoo.co.in</a>  
                                             </li>         
                                         </ul>
                                     </div>
@@ -367,7 +367,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. A. Anguraj
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
@@ -377,7 +377,7 @@
                                                 <br>PSG Arts and Science College,
                                                 <br>Coimbatore-641014.
                                                 <br>Mobile No: 9443737620
-                                                <br>Email: <a href="mailto: angurajpsg@yahoo.com">angurajpsg@yahoo.com</a>  
+                                                <br>Email: <a href="mailto: XXX@yahoo.com">XXX@yahoo.com</a>  
                                             </li>           
                                         </ul>
                                     </div>
@@ -389,7 +389,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. K. Ramasamy
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -399,7 +399,7 @@
                                                 <br>Kongunadu Arts and Science College,
                                                 <br>Coimbatore-641029.
                                                 <br>Mobile No: 9994433486
-                                                <br>Email: <a href="mailto: ramasamymaths@yahoo.com">ramasamymaths@yahoo.com</a>  
+                                                <br>Email: <a href="mailto: XXX@yahoo.com">XXX@yahoo.com</a>  
                                             </li>        
                                         </ul>
                                     </div>
@@ -409,7 +409,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. A.K. Abdul Hakeem
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -418,7 +418,7 @@
                                                 Department of Mathematics,
                                                 <br>Sri Ramakrishna Mission Vidyalayam College of Arts and Science, Coimbatore-641020.
                                                 <br>Mobile No: 9442401998
-                                                <br>Email: <a href="mailto: abdulhakeem6@gmail.com"> abdulhakeem6@gmail.com</a>  
+                                                <br>Email: <a href="mailto: XXX@gmail.com"> XXX@gmail.com</a>  
                                             </li>      
                                         </ul>
                                     </div>
@@ -430,7 +430,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. A. James Albert
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -440,7 +440,7 @@
                                                 <br>Hindustan College of Engineering & Technology,
                                                 Coimbatore-641032.
                                                 <br>Mobile No: 9443550626
-                                                <br>Email: <a href="mailto: asiralbert@gmail.com">asiralbert@gmail.com</a>  
+                                                <br>Email: <a href="mailto: XXXX@gmail.com">XXXX@gmail.com</a>  
                                             </li>         
                                         </ul>
                                     </div>
@@ -450,7 +450,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. S. Muralisankar
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -460,7 +460,7 @@
                                                 <br>Madurai Kamaraj University,
                                                 <br>Madurai-625021.
                                                 <br>Mobile No: 9444802626
-                                                <br>Email: <a href="mailto: muralimku@gmail.com">muralimku@gmail.com</a>  
+                                                <br>Email: <a href="mailto: XXX@gmail.com">XXX@gmail.com</a>  
                                             </li>      
                                         </ul>
                                     </div>
@@ -472,7 +472,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. R. Jayaraman
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -482,7 +482,7 @@
                                                 <br>Periyar University College of Arts and Science,
                                                 <br>Pappireddipatti-636 905, Dharmapuri.
                                                 <br>Mobile No: 9842890895
-                                                <br>Email: <a href="mailto: jayarammaths@gmail.com,jayarammaths@yahoo.co.in">jayarammaths@gmail.com, jayarammaths@yahoo.co.in</a>  
+                                                <br>Email: <a href="mailto: XXX@gmail.com,XXX@yahoo.co.in">XXX@gmail.com, jayarammaths@yahoo.co.in</a>  
                                             </li>      
                                         </ul>
                                     </div>
@@ -492,7 +492,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. N. Kamatchi
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -502,7 +502,7 @@
                                                 <br>Kamaraj College of Engineering and Technology,                   <br>Virudhunagar,
                                                 <br>Tamil Nadu 626001.
                                                 <br>Mobile No: 9789675351
-                                                <br>Email: <a href="mailto: kamakrishna77@gmail.com">kamakrishna77@gmail.com</a>  
+                                                <br>Email: <a href="mailto: XXX@gmail.com">XXX@gmail.com</a>  
                                             </li>       
                                         </ul>
                                     </div>
@@ -512,7 +512,7 @@
                             <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. A. Manivannan
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -522,7 +522,7 @@
                                                 <br>VIT University – Chennai Campus,
                                                 <br>Chennai – 600 127.
                                                 <br>Mobile No: 9894091336
-                                                <br>Email: <a href="mailto: manivannangru@gmail.com">manivannangru@gmail.com</a>  
+                                                <br>Email: <a href="mailto: XXX@gmail.com">XXX@gmail.com</a>  
                                             </li>        
                                         </ul>
                                     </div>
