--- a/static_templates/templates/review_board_jcm.html
+++ b/static_templates/templates/review_board_jcm.html
@@ -181,7 +181,7 @@
                                 <div class="editor-card-board">                             
                                             <div class="editor-info">
                                                 <h4>
-                                                    Dr. P. Shanthi
+                                                    Dr. XXX
                                                 </h4>
                                                 <ul>    
                                                     <li>
@@ -197,7 +197,7 @@
                                 <div class="editor-card-board">                             
                                             <div class="editor-info">
                                                 <h4>
-                                                    Dr. S. Valli Devaena
+                                                    Dr. XXX
                                                 </h4>
                                                 <ul>    
                                                     <li>
@@ -216,7 +216,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Preethi Keerthi D’souza
+                                            Dr. XXX
                                         </h4>
 
                                         <ul>    
@@ -233,7 +233,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. T. Srinivasan 
+                                            Dr. XXX
                                         </h4>
 
                                         <ul>    
@@ -252,7 +252,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr Yoganandan G
+                                            Dr XXX
                                         </h4>
                                         
                                         <ul>    
@@ -269,7 +269,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. M. Prakash
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
