--- a/static_templates/templates/review_board_jcs.html
+++ b/static_templates/templates/review_board_jcs.html
@@ -185,7 +185,7 @@
                                 <div class="editor-card-board">                             
                                             <div class="editor-info">
                                                 <h4>
-                                                    Dr. K. Alagarsamy
+                                                    Dr. XXX
                                                 </h4>
                                                 <ul>    
                                                     <li>
@@ -200,7 +200,7 @@
                                 <div class="editor-card-board">                             
                                             <div class="editor-info">
                                                 <h4>
-                                                    Dr. S. Jothi
+                                                    Dr. XXX
                                                 </h4>
                                                 <ul>    
                                                     <li>
@@ -217,7 +217,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. S. Sukumaran
+                                            Dr. XXX
                                         </h4>
 
                                         <ul>    
@@ -233,7 +233,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. C. Chandrasekar   
+                                            Dr. XXX  
                                         </h4>
 
                                         <ul>    
@@ -251,7 +251,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. V. Palaniswamy
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
@@ -267,7 +267,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Antony Selvadoss Thanamani
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
@@ -285,7 +285,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                        Dr. B.L. Shivakumar
+                                        Dr. XXX
                                         </h4>
                                 
                                     <ul>    
@@ -301,7 +301,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. L. Arockiam
+                                            Dr. XXX
                                         </h4>
                                 
                                     <ul>    
@@ -319,7 +319,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. M. Nagarajan
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
@@ -335,7 +335,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. T. Christopher
+                                            Dr. XXX
                                         </h4>
                                         
                                         <ul>    
@@ -353,7 +353,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Meiyappan
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -369,7 +369,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. E. Ramaraj
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -387,7 +387,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. S. Deepa
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -403,7 +403,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. M. Vijayakumar
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -421,7 +421,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Marimuthu
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -437,7 +437,7 @@
                             <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. A. Malathy
+                                            Dr. XXXX
                                         </h4>
                                     
                                         <ul>    
@@ -455,7 +455,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Roseline
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -471,7 +471,7 @@
                                 <div class="editor-card-board">                             
                                     <div class="editor-info">
                                         <h4>
-                                            Dr. Sumathi
+                                            Dr. XXX
                                         </h4>
                                     
                                         <ul>    
@@ -489,7 +489,7 @@
                                 <div class="editor-card-board">                             
                                         <div class="editor-info">
                                         <h4>
-                                            Dr. J. Abdul Samath
+                                            Dr. XXX
                                         </h4>
                                         <ul>    
                                             <li>
@@ -504,7 +504,7 @@
                                 <div class="editor-card-board">                             
                                         <div class="editor-info">
                                         <h4>
-                                            Dr.Saravanan V
+                                            Dr. XXX
                                         </h4>
                                         <ul>    
                                             <li>
@@ -521,7 +521,7 @@
                                 <div class="editor-card-board">                             
                                         <div class="editor-info">
                                         <h4>
-                                            Dr. T. Karthikeyan
+                                            Dr. XXX
                                         </h4>
                                         <ul>    
                                             <li>
@@ -536,7 +536,7 @@
                                 <div class="editor-card-board">                             
                                         <div class="editor-info">
                                         <h4>
-                                            Dr. A.V. Ramani
+                                            Dr. XXX
                                         </h4>
                                         <ul>    
                                             <li>
@@ -552,7 +552,7 @@
                                 <div class="editor-card-board">                             
                                         <div class="editor-info">
                                         <h4>
-                                            Dr.Bandgar Bapurao Mayappa
+                                            Dr. XXX
                                         </h4>
                                         <ul>    
                                             <li>
