--- a/account/templates/analytical_feedback.html
+++ b/account/templates/analytical_feedback.html
@@ -127,7 +127,7 @@
             </div>
             <div class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
                 <div class="content">
-                    <h1>Feedbacks Overview</h1>
+                    <h1>Analytical Feedbacks</h1>
 
                     {% for data in feedback_data %}
                         <div class="feedback-bar-container">
